# EntropyMaxxing

./: CMakeLists.txt  README.md  addons.c  addons.h  import.h  main.c
SORTINGS/BeadSort/: BeadSort.c  BeadSort.h
SORTINGS/BogoSort/: BogoSort.c  BogoSort.h
SORTINGS/BozoSort/: BozoSort.c  BozoSort.h
SORTINGS/IntelligentDesignSort/: IntelligentDesignSort.c  IntelligentDesignSort.h
SORTINGS/JingleSort/: JingleSort.c  JingleSort.h
SORTINGS/MiracleSort/: MiracleSort.c  MiracleSort.h
SORTINGS/NoSort/: NoSort.c  NoSort.h
SORTINGS/PancakeSort/: PancakeSort.c  PancakeSort.h
SORTINGS/PickOne/: PickOne.c  PickOne.h
SORTINGS/QuantumBogosort/: QuantumBogosort.c  QuantumBogosort.h
SORTINGS/SleepSort/: SleepSort.c  SleepSort.h
SORTINGS/SlowSort/: SlowSort.c  SlowSort.h
SORTINGS/StalinSort/: StalinSort.c  StalinSort.h
SORTINGS/StoogeSort/: StoogeSort.c  StoogeSort.h
SORTINGS/ThanosSort/: ThanosSort.c  ThanosSort.h
